--- a/KifuSF/KFVWidget.xib
+++ b/KifuSF/KFVWidget.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -14,7 +13,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="KFVWidget" customModule="KifuSF" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="605" height="128"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -32,11 +31,19 @@
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eZU-M6-TOl">
                             <rect key="frame" x="0.0" y="0.0" width="605" height="64"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nqd-0j-NoP">
                             <rect key="frame" x="0.0" y="64" width="605" height="64"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </view>
                     </subviews>
+                    <variation key="default">
+                        <mask key="subviews">
+                            <exclude reference="eZU-M6-TOl"/>
+                            <exclude reference="nqd-0j-NoP"/>
+                        </mask>
+                    </variation>
                 </stackView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="zia-VS-cLR">
                     <rect key="frame" x="0.0" y="0.0" width="605" height="128"/>
@@ -62,16 +69,16 @@
                                             </constraints>
                                         </imageView>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="qid-I4-hux">
-                                            <rect key="frame" x="68" y="8" width="487" height="47.5"/>
+                                            <rect key="frame" x="68" y="8" width="480" height="47.5"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Delivery - Toilet Paper" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4GJ-BG-dKO">
-                                                    <rect key="frame" x="0.0" y="0.0" width="487" height="24"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="480" height="24"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Awaiting your approval" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="alT-1h-HsJ">
-                                                    <rect key="frame" x="0.0" y="24" width="487" height="23.5"/>
+                                                    <rect key="frame" x="0.0" y="24" width="480" height="23.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -79,7 +86,7 @@
                                             </subviews>
                                         </stackView>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DisclosureIcon" translatesAutoresizingMaskIntoConstraints="NO" id="rzz-CZ-c6e">
-                                            <rect key="frame" x="571" y="23" width="18" height="18"/>
+                                            <rect key="frame" x="564" y="19.5" width="25" height="25"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="rzz-CZ-c6e" secondAttribute="height" multiplier="1:1" id="VoM-ZS-NMk"/>
                                             </constraints>
@@ -127,16 +134,16 @@
                                             </constraints>
                                         </imageView>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="tTz-JQ-Hk4">
-                                            <rect key="frame" x="68" y="8" width="487" height="47.5"/>
+                                            <rect key="frame" x="68" y="8" width="480" height="47.5"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Donation - Toilet Paper" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M6u-8n-c0U">
-                                                    <rect key="frame" x="0.0" y="0.0" width="487" height="24"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="480" height="24"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Awaiting your verification" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZvY-LT-NjB">
-                                                    <rect key="frame" x="0.0" y="24" width="487" height="23.5"/>
+                                                    <rect key="frame" x="0.0" y="24" width="480" height="23.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -144,7 +151,7 @@
                                             </subviews>
                                         </stackView>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DisclosureIcon" translatesAutoresizingMaskIntoConstraints="NO" id="0Xi-p1-Fgr">
-                                            <rect key="frame" x="571" y="23" width="18" height="18"/>
+                                            <rect key="frame" x="564" y="19.5" width="25" height="25"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="0Xi-p1-Fgr" secondAttribute="height" multiplier="1:1" id="FnM-C7-fEb"/>
                                             </constraints>
@@ -190,6 +197,11 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <variation key="default">
+                <mask key="subviews">
+                    <exclude reference="mYQ-5w-GyQ"/>
+                </mask>
+            </variation>
             <connections>
                 <outlet property="containerStackView" destination="zia-VS-cLR" id="uOL-yq-X8M"/>
                 <outlet property="deliveryBackgroundView" destination="eZU-M6-TOl" id="gWq-h0-dqw"/>
@@ -207,9 +219,9 @@
         </view>
     </objects>
     <resources>
-        <image name="DeliveryIcon" width="45" height="45"/>
-        <image name="DisclosureIcon" width="10" height="18"/>
-        <image name="DonationIcon" width="45" height="45"/>
+        <image name="DeliveryIcon" width="20" height="14"/>
+        <image name="DisclosureIcon" width="25" height="25"/>
+        <image name="DonationIcon" width="25" height="25"/>
         <namedColor name="WhiteColor">
             <color red="0.98039215686274506" green="0.98039215686274506" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
