--- a/KifuSF/CreateDonation.storyboard
+++ b/KifuSF/CreateDonation.storyboard
@@ -168,6 +168,54 @@ food, toilet paper, etc.
             </objects>
             <point key="canvasLocation" x="3624.8000000000002" y="168.6656671664168"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="nCK-A5-Yaa">
+            <objects>
+                <viewController id="qZZ-Ei-jjg" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="slq-yG-iWN">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="wtd-h3-Q3F">
+                                <rect key="frame" x="16" y="587" width="343" height="64"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wmV-qA-5sH">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="30"/>
+                                        <state key="normal" title="Button"/>
+                                    </button>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EpL-Qp-VwU">
+                                        <rect key="frame" x="0.0" y="46" width="343" height="18"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Already an user?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VeG-d5-Hvk">
+                                                <rect key="frame" x="0.0" y="0.0" width="114.5" height="18"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Sign in" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1go-LU-JWR">
+                                                <rect key="frame" x="114.5" y="0.0" width="228.5" height="18"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="7uF-06-YxW" firstAttribute="bottom" secondItem="wtd-h3-Q3F" secondAttribute="bottom" constant="16" id="ED1-bI-FhV"/>
+                            <constraint firstItem="wtd-h3-Q3F" firstAttribute="leading" secondItem="7uF-06-YxW" secondAttribute="leading" constant="16" id="oqQ-ai-NKu"/>
+                            <constraint firstItem="7uF-06-YxW" firstAttribute="trailing" secondItem="wtd-h3-Q3F" secondAttribute="trailing" constant="16" id="wdt-Nl-TXb"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="7uF-06-YxW"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JdQ-g4-AeV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4530" y="132"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="9Rk-te-pbl">
             <objects>
